# BIMAL

./: .gitignore  README.md  environment.yml  pyproject.toml
config/: real.yml  sim.yml
model/: action_vae.py  policy.py  vision.py  vita.py
scripts/: collect_sim_episodes.py  extract_frames.py  inference.py  inference_vita.py  play_sim.py  scripted_policy.py  train_real.py  train_sim.py
utils/: constants.py  ee_sim_env.py  hdf5.py  real_dataset.py  sim_env.py
